--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   desktop_drop: ^0.4.1
   opscroll_web: ^0.3.2
   carousel_slider: ^4.2.1
+  reveal_on_scroll: ^0.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
