--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   opscroll_web: ^0.3.2
   carousel_slider: ^4.2.1
   reveal_on_scroll: ^0.0.3
+  hidable: ^1.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
