--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,13 @@ dependencies:
     sdk: flutter
   desktop_drop: ^0.4.1
   opscroll_web: ^0.3.2
-  carousel_slider: ^4.2.1
-  reveal_on_scroll: ^0.0.3
   hidable: ^1.0.4
+  flutter_image_slideshow: ^0.1.5
+  mccounting_text: ^1.0.0
+  intl: ^0.18.1
+  animated_digit: ^3.2.1
+  reveal_on_scroll: ^0.0.3
+  flutter_staggered_animations: ^1.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
