--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,12 @@ dependencies:
     sdk: flutter
   desktop_drop: ^0.4.1
   opscroll_web: ^0.3.2
-  hidable: ^1.0.4
   flutter_image_slideshow: ^0.1.5
-  mccounting_text: ^1.0.0
   intl: ^0.18.1
-  animated_digit: ^3.2.1
   reveal_on_scroll: ^0.0.3
   flutter_staggered_animations: ^1.1.1
+  animated_text_kit: ^4.2.2
+  countup: ^0.1.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -80,17 +79,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: LINE_seed
+      fonts:
+        - asset: assets/fonts/LINESeedKR-Rg.ttf
+        - asset: assets/fonts/LINESeedKR-Bd.ttf
+          weight: 700
+        - asset: assets/fonts/LINESeedKR-Th.ttf
+          weight: 100
+    - family: Cafe_24
+      fonts:
+        - asset: assets/fonts/Cafe24Classictype.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
