--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   desktop_drop: ^0.4.1
   opscroll_web: ^0.3.2
   flutter_image_slideshow: ^0.1.5
+  carousel_slider: ^4.2.1
   intl: ^0.18.1
   reveal_on_scroll: ^0.0.3
   flutter_staggered_animations: ^1.1.1
