--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  desktop_drop: ^0.4.1
   opscroll_web: ^0.3.2
-  flutter_image_slideshow: ^0.1.5
   carousel_slider: ^4.2.1
   intl: ^0.18.1
   reveal_on_scroll: ^0.0.3
-  flutter_staggered_animations: ^1.1.1
   animated_text_kit: ^4.2.2
   countup: ^0.1.4
+  animate_do: ^3.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
