--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  opscroll_web: ^0.3.2
-
   carousel_slider: ^4.2.1
   widget_and_text_animator: ^1.0.9
   animated_text_kit: ^4.2.2
   animate_do: ^3.0.2
   countup: ^0.1.4
+  flutter_staggered_grid_view: ^0.6.2
   intl: ^0.18.1
   get: ^4.6.5
 
