--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   animate_do: ^3.0.2
   countup: ^0.1.4
   flutter_staggered_grid_view: ^0.6.2
+  autoscale_tabbarview: ^1.0.2
   intl: ^0.18.1
   get: ^4.6.5
 
