--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   carousel_slider: ^4.2.1
   widget_and_text_animator: ^1.0.9
   animated_text_kit: ^4.2.2
@@ -37,8 +39,12 @@ dependencies:
   countup: ^0.1.4
   flutter_staggered_grid_view: ^0.6.2
   autoscale_tabbarview: ^1.0.2
-  intl: ^0.18.1
+  # intl: ^0.18.1
   get: ^4.6.5
+
+  firebase_core: ^2.14.0
+  firebase_auth: ^4.6.3
+  cloud_firestore: ^4.8.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -64,6 +70,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
