--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,15 +32,17 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  motion: ^1.4.0
   carousel_slider: ^4.2.1
   widget_and_text_animator: ^1.0.9
   animated_text_kit: ^4.2.2
   animate_do: ^3.0.2
   countup: ^0.1.4
   flutter_staggered_grid_view: ^0.6.2
-  autoscale_tabbarview: ^1.0.2
-  # intl: ^0.18.1
   get: ^4.6.5
+  # flutter_admin_scaffold: ^1.2.0
+  side_sheet: ^1.0.4
+  # intl: ^0.18.1
 
   firebase_core: ^2.14.0
   firebase_auth: ^4.6.3
