--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   get: ^4.6.5
   # flutter_admin_scaffold: ^1.2.0
   side_sheet: ^1.0.4
+  zoom_widget: ^2.0.1
   # intl: ^0.18.1
 
   firebase_core: ^2.14.0
