--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
 
   firebase_core: ^2.14.0
   firebase_auth: ^4.6.3
+  # firebase_storage: ^11.2.3
   cloud_firestore: ^4.8.1
 
   # The following adds the Cupertino Icons font to your application.
