--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,13 +40,13 @@ dependencies:
   countup: ^0.1.4
   flutter_staggered_grid_view: ^0.6.2
   get: ^4.6.5
-  # flutter_admin_scaffold: ^1.2.0
   side_sheet: ^1.0.4
-  zoom_widget: ^2.0.1
+  image_picker: ^1.0.0
+  image_picker_web: ^3.0.0+1
 
   firebase_core: ^2.14.0
   firebase_auth: ^4.6.3
-  # firebase_storage: ^11.2.3
+  firebase_storage: ^11.2.3
   cloud_firestore: ^4.8.1
 
   # The following adds the Cupertino Icons font to your application.
