--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   side_sheet: ^1.0.4
   image_picker: ^1.0.0
   file_picker: ^5.3.2
+  baseflow_plugin_template: ^2.1.2
   permission_handler: ^10.4.2
   image_picker_web: ^3.0.0+1
 
