--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   permission_handler: ^10.4.2
   image_picker_web: ^3.0.0+1
   url_launcher: ^6.1.12
+  flutter_spinkit: ^5.2.0
 
   firebase_auth: ^4.6.3
   firebase_core: ^2.14.0
