--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,8 @@ flutter:
     - assets/images/
     - assets/images/logos/
     - assets/images/sponsorship/
+    - assets/images/fabrics/
+    - assets/images/making_process/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
