--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,14 +41,13 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.2
   get: ^4.6.5
   side_sheet: ^1.0.4
-  image_picker: ^1.0.0
   file_picker: ^5.3.2
   baseflow_plugin_template: ^2.1.2
   permission_handler: ^10.4.2
-  image_picker_web: ^3.0.0+1
   url_launcher: ^6.1.12
-  flutter_spinkit: ^5.2.0
   flutter_native_splash: ^2.3.1
+  video_player: ^2.6.1
+  video_player_web_hls: ^1.1.0
 
   firebase_auth: ^4.6.3
   firebase_core: ^2.14.0
@@ -88,6 +87,7 @@ flutter:
     - assets/images/sponsorship/
     - assets/images/fabrics/
     - assets/images/making_process/
+    - assets/images/jemulpoclub/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
