--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_native_splash: ^2.3.1
   video_player: ^2.6.1
   video_player_web_hls: ^1.1.0
+  image_fade: ^0.6.2
 
   firebase_auth: ^4.6.3
   firebase_core: ^2.14.0
