--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/background/
     - assets/images/logos/
     - assets/images/sponsorShip/
     - assets/images/fabrics/
