--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,28 +32,29 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  motion: ^1.4.0
   carousel_slider: ^4.2.1
   widget_and_text_animator: ^1.0.9
   animated_text_kit: ^4.2.2
   animate_do: ^3.0.2
   countup: ^0.1.4
   flutter_staggered_grid_view: ^0.6.2
-  get: ^4.6.5
   side_sheet: ^1.0.4
   file_picker: ^5.3.2
   baseflow_plugin_template: ^2.1.2
   permission_handler: ^10.4.2
-  url_launcher: ^6.1.12
   flutter_native_splash: ^2.3.1
   video_player: ^2.6.1
   video_player_web_hls: ^1.1.0
   image_fade: ^0.6.2
 
+  get: ^4.6.5
+  url_launcher: ^6.1.12
+
   firebase_auth: ^4.6.3
   firebase_core: ^2.14.0
   firebase_storage: ^11.2.3
   cloud_firestore: ^4.8.1
+  firebase_analytics: ^10.4.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
