--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   video_player: ^2.6.1
   video_player_web_hls: ^1.1.0
   image_fade: ^0.6.2
+  meta_seo: ^3.0.5
 
   get: ^4.6.5
   url_launcher: ^6.1.12
