--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,6 +95,7 @@ flutter:
     - assets/images/jemulpoClub/
     - assets/images/academy/
     - assets/images/rentalProducts/
+    - assets/images/bespokeProducts/
     - assets/images/rentalCenter/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
